# Romanian-Legal-Document-Assistent

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
data/: cezicelegea_dump.json
data/eval/: ablation_contracts.md  faithfulness_sample.md  forms_eval.md  forms_gold.json  forms_results.json  gold_set.json  gold_set_batch1.json  gold_set_pre_expand.json  gold_set_pre_kwfix.json  gold_set_smoke.json  r4_audit.md  r7_calibration.md  refusal_experiment.md  retrieval_scores.json  without_contracts_analysis.md
data/eval/runs/: refusal_experiment_20260605_062304.json  summary.csv
data/eval/runs/20260525_183423_qwen2.5_3b-instruct-q4_K_M/: report.md  results.json
data/eval/runs/20260525_234749_qwen2.5_3b-instruct-q4_K_M/: report.md  (+1 more)
data/results/: ablation_contracts.json
data/results/runs/: r7_recovery.json  refusal_experiment_20260614_163358.json
docs/: CONTEXT.md
kaggle/: README.md  _build_notebook.py  eval-7b-modified.ipynb  eval_7b.ipynb  licenta_gpu_all.ipynb  ollama_endpoint.ipynb
scripts/: ablation_contracts.py  build_gold.py  chat.py  demo.sh  demo_remote.sh  eval.py  eval_forms.py  fewshot_experiment.py  form.py  plots.py  query.py  r4_ablation.py  r7_experiment.py  refusal_experiment.py  retrieval_scores.py  without_contracts_analysis.py
src/licenta/: chunker.py  contracts.py  evaluate.py  extractor.py  form_registry.py  forms.py  generator.py  index.py  prefill.py  retriever.py  scraper.py
thesis/: 0-abstract.tex  0-title.tex  1-introducere.tex  2-preliminarii.tex  3-sistem.tex  4-evaluare.tex  5-concluzii.tex  bibliography.bib  main.tex
(+57 files in other folders)
