[project]
name = "licenta"
version = "0.1.0"
description = "Local RAG assistant for Romanian public-administration procedures, with an output-contract verification layer and form pre-fill."
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "fpdf2>=2.8.7",
    "huggingface-hub>=0.33",
    "importlib-metadata>=8.0",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "requests>=2.34.0",
    "sentence-transformers<4",
    "streamlit>=1.57.0",
    "torch<2.10",
    "transformers<5",
    "typer>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/licenta"]

